--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,6 @@
    "version": "1.0.0",
    "description": "Hides every button in the DMs list except friends.",
    "author": "eternal",
+   "discord": "shnvz5ryAt",
    "license": "Unlicensed"
 }
