--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,6 @@
    "version": "1.0.0",
    "description": "Hides every button in the DMs list except friends.",
    "author": "eternal",
-   "discord": "shnvz5ryAt",
+   "discord": "HQ5N7Rcajc",
    "license": "Unlicensed"
 }
